# md2kindle

./: .env.example  .gitignore  AI_CONTEXT.md  Iniciar_Manga_To_Kindle.bat  Iniciar_Manga_To_Kindle_Local.bat  MEMORIA.md  README.es.md  README.md  TO-DO-list.md  help.txt  md2kindle.py  md2kindle_legacy.py  pyproject.toml  requirements.txt  run.bat  telegram-bot.gs
.github/: copilot-instructions.md
.github/workers/: telegram-bot.js
.github/workflows/: kindle-delivery.yml  manga-pipeline.yml
md2kindle/: __init__.py  __main__.py  api.py  cli.py  config.py  converter.py  delivery.py  downloader.py  log_config.py  models.py  pipeline.py  ranges.py
md2kindle/delivery/: __init__.py  d1.py  ffsend.py  r2.py  service.py  telegram.py  usb.py
md2kindle/infrastructure/: __init__.py  binaries.py
md2kindle/mangadex/: __init__.py  api.py  downloader.py
tests/: test_config_boundaries.py  test_delivery_service.py  test_md2kindle.py  test_usb.py
