[project]
name = "md2kindle"
version = "1.3.0"
description = "MangaDex to Kindle CLI converter — descarga, convierte y entrega manga a e-readers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "requests",
    "mangadex-downloader>=1.0.0",
    "python-dotenv",
]

[project.scripts]
md2kindle = "md2kindle.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
