[project]
name = "md2kindle"
version = "1.3.0"
description = "MangaDex to Kindle CLI converter — descarga, convierte y entrega manga a e-readers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "requests",
    "mangadex-downloader>=1.0.0",
    "chardet>=3.0.2,<6.0.0",
    "python-dotenv",
    "boto3",
]

[project.scripts]
md2kindle = "md2kindle.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["md2kindle*"]

[tool.pytest.ini_options]
addopts = "--basetemp=.test_tmp -p no:cacheprovider"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
